# python-agents

./: .env  .env.example  .env.nodejs.example  .env.workers-multi.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  IMPLEMENTATION_COMPLETE.md  LIGHTWEIGHT_ALTERNATIVES_ANALYSIS.md  Makefile  OPENROUTER_CONFIG.md  PRECOMMIT.md  README.md  TESTING.md  TESTING_REFACTOR_SUMMARY.md  TRAEFIK_SETUP.md  async_tasks.py  backend_app.py  commit_fix.ps1  commit_fix_nesting.ps1  commit_fix_rabbitmq.ps1  config.py  debug_llm.py  deploy-dockerhub.sh  docker-compose.frontend.yml  docker-compose.proxy.yaml  docker-compose.proxy.yml  docker-compose.test.yml  docker-compose.traefik.yml  docker-compose.worker.yml  docker-compose.workers-multi.yml  docker-compose.yml  frontend_cli.py  main.py  (+14 more)
api/: .vercelignore  index.py
apps/worker/: .env.example  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.worker  SERVERLESS_DEPLOYMENT.md  async_tasks.py  config.py  main.py  pyproject.toml  pytest.ini  queue_worker.py  requirements-dev.txt  requirements.txt
apps/worker/services/: azure_storage.py  ingestion.py  llm.py  queue_service.py  vector_db.py  vector_db_interfaces.py
apps/worker/tests/: conftest.py  test_async_tasks.py  test_db_setup.sql  test_single_task_mode.py  test_vector_db_integration.py
backend/: .bandit  .env.example  .ruff.toml  CRITICAL_FIXES_APPLIED.md  Dockerfile  Dockerfile.worker  HOTFIX_SINGLETON_CLOSURE.md  MAJOR_IMPROVEMENTS_COMPLETE.md  Makefile  REFACTORING_SUMMARY.md  SECURITY.md  SERVERLESS_DEPLOYMENT.md  agent_app.py  async_tasks.py  auth.py  backend_app.py  clients.py  config.py  database.py  documents_app.py  file_watcher.py  notifications_app.py  preload_models.py  requirements-agent.txt  requirements-documents.txt  requirements-notifications.txt  requirements-summaries.txt  requirements-vercel.txt  requirements.txt  summaries_app.py  summarizer.py  sync_agent.py  test_pydantic_migration.py  verify_postgres.py
backend-nodejs/: README.md
docs/: AUTH_MIGRATION.md  BACKEND_DEPLOYMENT.md  BACKEND_PERF_ANALYSIS.md  CI_CD.md  DEPLOYMENT_ORDER.md  IMPLEMENTATION_COMPLETE.md  INSTANCE_SETUP.md  MULTI_INSTANCE_README.md  OPENROUTER_CONFIG.md  PHANTOM_DEPENDENCIES_AUDIT.md  PNPM_MIGRATION.md  PNPM_MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  SHADCN_MIGRATION_ANALYSIS.md  SHADCN_MIGRATION_STATUS.md  TESTING_REFACTOR_SUMMARY.md  UI_MIGRATION.md  UI_VISUAL_SYSTEM_OVERHAUL.md  VERCEL_CICD_PLAN.md  VERCEL_MIGRATION_GUIDE.md  VISUAL_FIX_ROOT_CAUSE.md  deploy-worker-vps.md
examples/: tenant1.env.example
frontend-legacy/: .vercelignore  (+10 more)
(+386 files in other folders)
